--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^10.3.2",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.2",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.3.2",
     "@nestjs/platform-fastify": "^10.4.1",
     "@nestjs/swagger": "^7.4.0",
