feat: config typeorm

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 APP_PORT= 
 NODE_ENV=
+
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME=
+DATABASE_SCHEMA_NAME=
+DATABASE_SERVICE_NAME=
