--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:cov": "dotenv -e .env.test -- jest --runInBand --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "dotenv -e .env.test -- jest --runInBand --config ./jest.e2e.config.ts",
-    "typeorm": "typeorm-ts-node-commonjs -d src/core/config/database/typeorm/ormconfig.ts"
+    "typeorm": "typeorm-ts-node-commonjs -d src/core/config/database/typeorm/orm.config.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
@@ -44,6 +44,8 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
     "@nestjs/cli": "^10.3.1",
     "@nestjs/schematics": "^10.1.0",
     "@nestjs/testing": "^10.3.2",
@@ -60,6 +62,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
+    "lefthook": "^1.7.15",
     "prettier": "^3.2.5",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
